list of guests have now a scrollbar and a fixed size to avoid window overflow

--- a/public/theme/style.css
+++ b/public/theme/style.css
@@ -35,3 +35,8 @@ footer {
 
 #event_see #rightside {
 }
+
+#event_see ul.nav {
+	height: 300px;
+	overflow: scroll;
+}
